docs/tech/virtualization/k8s/example/argocd/argocd-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /argocd/
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
